@@ -7,6 +7,7 @@ timetracking 1.3.1 - not released yet
 	* Added: Filter for overbooked tasks (in percent)
 	* Added: Filter for overbooked tasks (absolute in minutes)
 	* Bugfix: Fixed quicktask-handling (task_done flag was ignored / wrongly overwritten)
+	* Bugfix: Fixed filter for overbooked tasks. Calculation is now over the summed tracked workload
 
 timetracking 1.3.0 - 2013-03-27
 	* Added: Icon for overtime tasks
